service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nodejs-app
spec:
  type: NodePort 
  selector: 
    app: uklon
  ports: 
    - port      : 3000
      targetPort: 3000
