ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec: 
  rules: 
  - host: uklon.com.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-app
            port:
              number: 3000
